---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    IfExprWithTwistedArms:
      - b
      - a
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 21
  fix:
    content: a if a else b
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 21
  parent: ~
- kind:
    IfExprWithTwistedArms:
      - b + c
      - a
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 25
  fix:
    content: a if a else b + c
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 25
  parent: ~

